--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,18 +1,96 @@
+---
 version: 2
 updates:
   - package-ecosystem: gomod
-    directories: [ "/", "/api", "/client", "/models" ]
+    directory: /api
     schedule:
-      interval: "daily"
-    groups:
-      go-security-dependencies:
-        applies-to: security-updates
-        patterns:
-          - "*"  
+      interval: daily
     labels:
-      - "approved"
-      - "lgtm"
-      - "go"
-      - "dependabot"
+      - approved
+      - lgtm
+      - dependabot
+      - go
     commit-message:
-      prefix: "NO-ISSUE"
+      prefix: NO-ISSUE
+    groups:
+      go-minor-api-dependencies:
+        patterns:
+          - "*"
+        update-types:
+          - minor
+          - patch
+      go-major-api-dependencies:
+        patterns:
+          - "*"
+        update-types:
+          - major
+
+  - package-ecosystem: gomod
+    directory: /client
+    schedule:
+      interval: daily
+    labels:
+      - approved
+      - lgtm
+      - dependabot
+      - go
+    commit-message:
+      prefix: NO-ISSUE
+    groups:
+      go-minor-client-dependencies:
+        patterns:
+          - "*"
+        update-types:
+          - minor
+          - patch
+      go-major-client-dependencies:
+        patterns:
+          - "*"
+        update-types:
+          - major
+          
+  - package-ecosystem: gomod
+    directory: /models
+    schedule:
+      interval: daily
+    labels:
+      - approved
+      - lgtm
+      - dependabot
+      - go
+    commit-message:
+      prefix: NO-ISSUE
+    groups:
+      go-minor-models-dependencies:
+        patterns:
+          - "*"
+        update-types:
+          - minor
+          - patch
+      go-major-models-dependencies:
+        patterns:
+          - "*"
+
+  - package-ecosystem: gomod
+    directory: /
+    schedule:
+      interval: daily
+    labels:
+      - approved
+      - lgtm
+      - dependabot
+      - go
+    commit-message:
+      prefix: NO-ISSUE
+    groups:
+      go-minor-dependencies:
+        patterns:
+          - "*"
+        update-types:
+          - minor
+          - patch
+      go-major-dependencies:
+        patterns:
+          - "*"
+        update-types:
+          - major
