--- a/deploy/wiremock/wiremock-deployment.yaml
+++ b/deploy/wiremock/wiremock-deployment.yaml
@@ -31,8 +31,8 @@ spec:
   spec:
     type: LoadBalancer
     ports:
-      - name: wiremock
-        port: 8070
+      - name: assisted-image-service
+        port: 8080
         protocol: TCP
         targetPort: 8080
     selector:
