--- a/hack/kind/kind-config.yaml
+++ b/hack/kind/kind-config.yaml
@@ -1,6 +1,6 @@
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
-name: assisted-hub-cluster
+name: assisted-installer-kind
 nodes:
 - role: control-plane
   extraPortMappings:
