--- a/Dockerfile.assisted-service-build
+++ b/Dockerfile.assisted-service-build
@@ -1,22 +1,16 @@
-FROM registry.access.redhat.com/ubi9/go-toolset:1.20 AS golang
-
-RUN curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.53.2
-RUN go install gotest.tools/gotestsum@latest
+FROM registry.ci.openshift.org/openshift/release:golang-1.20 AS golang
+RUN chmod g+xw -R /usr/local/go
 
 FROM quay.io/centos/centos:stream9
 
-ENV GOROOT=/usr/lib/golang
-ENV GOPATH=/opt/app-root/src/go
+ENV GOPATH=/go
+ENV GOROOT=/usr/local/go
 ENV VIRTUAL_ENV=/opt/venv
 # A directory in the path with write permission even for non-root users
 ENV TOOLS=/tools/
 ENV PATH="$VIRTUAL_ENV/bin:$GOROOT/bin:$GOPATH/bin:$TOOLS:$PATH"
 
-COPY --from=golang $GOPATH $GOPATH
-COPY --from=golang $GOROOT $GOROOT
-
-RUN chmod 775 -R $GOPATH && chmod 775 -R $GOROOT
-
+RUN curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b /usr/bin v1.53.2
 # TODO: Replace with version 0.30.4 once it is released.
 #
 # We need version 5d0a00d of go-swagger because it is the first that contains
@@ -33,13 +27,15 @@ RUN chmod 775 -R $GOPATH && chmod 775 -R $GOROOT
 COPY --from=quay.io/goswagger/swagger:sha-5d0a00d /usr/bin/swagger /usr/bin/goswagger
 
 COPY --from=quay.io/edge-infrastructure/swagger-codegen-cli:2.4.18 /opt/swagger-codegen-cli /opt/swagger-codegen-cli
+COPY --from=golang /usr/bin/gotestsum /usr/bin/make /usr/bin/
+COPY --from=golang /usr/local/go /usr/local/go
 COPY --from=quay.io/openshift/origin-cli:latest /usr/bin/oc /usr/bin
 COPY --from=quay.io/operator-framework/upstream-opm-builder:v1.16.1 /bin/opm /bin
 COPY --from=registry.k8s.io/kustomize/kustomize:v4.3.0 /app/kustomize /usr/bin/
 COPY --from=quay.io/coreos/shellcheck-alpine:v0.5.0 /bin/shellcheck /usr/bin/shellcheck
 
 RUN dnf install -y --enablerepo=crb \
-        openssl openssl-devel postgresql nmstate-devel sqlite gcc genisoimage git libvirt-client libvirt-devel java make && \
+        openssl postgresql nmstate-devel sqlite gcc genisoimage git libvirt-client libvirt-devel java && \
     dnf clean all
 
 # Git checks if the user that owns the files on the filesystem match the
