--- a/config/samples/agent-install.openshift.io_v1beta1_agentserviceconfig.yaml
+++ b/config/samples/agent-install.openshift.io_v1beta1_agentserviceconfig.yaml
@@ -142,20 +142,20 @@ spec:
     version: 416.94.202406251923-0
   - cpuArchitecture: x86_64
     openshiftVersion: '4.17'
-    url: https://mirror.openshift.com/pub/openshift-v4/x86_64/dependencies/rhcos/pre-release/4.17.0-ec.3/rhcos-4.17.0-ec.3-x86_64-live.x86_64.iso
-    version: 417.94.202407010929-0
+    url: https://mirror.openshift.com/pub/openshift-v4/x86_64/dependencies/rhcos/4.17/4.17.0/rhcos-4.17.0-x86_64-live.x86_64.iso
+    version: 417.94.202408270355-0
   - cpuArchitecture: arm64
     openshiftVersion: '4.17'
-    url: https://mirror.openshift.com/pub/openshift-v4/aarch64/dependencies/rhcos/pre-release/4.17.0-ec.3/rhcos-4.17.0-ec.3-aarch64-live.aarch64.iso
-    version: 417.94.202407010929-0
+    url: https://mirror.openshift.com/pub/openshift-v4/aarch64/dependencies/rhcos/4.17/4.17.0/rhcos-4.17.0-aarch64-live.aarch64.iso
+    version: 417.94.202408270355-0
   - cpuArchitecture: ppc64le
     openshiftVersion: '4.17'
-    url: https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/pre-release/4.17.0-ec.3/rhcos-4.17.0-ec.3-ppc64le-live.ppc64le.iso
-    version: 417.94.202407010929-0
+    url: https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/4.17/4.17.0/rhcos-4.17.0-ppc64le-live.ppc64le.iso
+    version: 417.94.202408270355-0
   - cpuArchitecture: s390x
     openshiftVersion: '4.17'
-    url: https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/pre-release/4.17.0-ec.3/rhcos-4.17.0-ec.3-s390x-live.s390x.iso
-    version: 417.94.202407010929-0
+    url: https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/4.17/4.17.0/rhcos-4.17.0-s390x-live.s390x.iso
+    version: 417.94.202408270355-0
   - cpuArchitecture: x86_64
     openshiftVersion: '4.18'
     url: https://mirror.openshift.com/pub/openshift-v4/x86_64/dependencies/rhcos/pre-release/4.18.0-ec.1/rhcos-4.18.0-ec.1-x86_64-live.x86_64.iso
