--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -17,6 +17,9 @@ patchesStrategicMerge:
 #- patches/webhook_in_images.yaml
 #- patches/webhook_in_clusters.yaml
 #- patches/webhook_in_hosts.yaml
+- patches/webhook_in_agents.yaml
+- patches/webhook_in_infraenvs.yaml
+- patches/webhook_in_agentclassifications.yaml
 # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
 # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
@@ -24,6 +27,9 @@ patchesStrategicMerge:
 #- patches/cainjection_in_images.yaml
 #- patches/cainjection_in_clusters.yaml
 #- patches/cainjection_in_hosts.yaml
+#- patches/cainjection_in_agents.yaml
+#- patches/cainjection_in_infraenvs.yaml
+#- patches/cainjection_in_agentclassifications.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
