--- a/config/crd/resources.yaml
+++ b/config/crd/resources.yaml
@@ -3034,6 +3034,21 @@ spec:
                       type: string
                   type: object
                 type: array
+              mirrorRegistryRef:
+                description: MirrorRegistryRef is a reference to a given MirrorRegistry
+                  ConfigMap that holds the registries toml data
+                properties:
+                  name:
+                    description: Name is the name of the ConfigMap that this refers
+                      to
+                    type: string
+                  namespace:
+                    description: Namespace of the ConfigMap
+                    type: string
+                required:
+                - name
+                - namespace
+                type: object
               nmStateConfigLabelSelector:
                 description: |-
                   NmstateConfigLabelSelector associates NMStateConfigs for hosts that are considered part
